correct some typos

--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
       <span class="small">by <a href="http://github.com/cloudly">cloudly</a></span></h1>
 
     <div class="description">
-      a book about "Play Econometrics with R"
+      a brochure about "Play Econometrics with R"
     </div>
 
     <h2>Contact</h2>
-<p>Cloudly (cloudlychen@gmail.com)<br/>      </p>
+<p>Cloudly (cloudlychen@gmail.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
